--- a/manifest.yml
+++ b/manifest.yml
@@ -2,7 +2,7 @@ applications:
 - name: pas-telstrawifiapi-client
   memory: 512M
   instances: 1
-  host: pas-telstrawifi
+  random-route: true
   path: ./target/TelstraWIFIAPIPublic-0.0.1-SNAPSHOT.jar
   env:
     JAVA_OPTS: -Djava.security.egd=file:///dev/urando
